<resources>
    <string name="app_name">QuizApp</string>
    <string name="welcome">Welcome</string>
    <string name="enter_name">Please enter your name.</string>
    <string name="quiz_app">Quiz App!</string>
    <string name="btnStart">Start</string>
    <string name="etName">Name</string>
    <string name="cdFlagImage">Quiz Image</string>
    <string name="btnSubmit">Submit</string>
    <string name="result">Result</string>
    <string name="congratulations">Hey, Congratulations!</string>
    <string name="btnFinish">FINISH</string>
</resources>