<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity"
    android:background="@drawable/ic_bg"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="20dp">

    <TextView
        android:id="@+id/tvResult"
        android:layout_marginTop="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"/>
    <ImageView
        android:id="@+id/tvTrophy"
        android:layout_width="300dp"
        android:layout_height="280dp"
        android:contentDescription="image"
        android:src="@drawable/ic_trophy"/>
    <TextView
        android:id="@+id/tvCongratulations"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/congratulations"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/tvName"
        android:layout_marginTop="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Name"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/tvScore"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Your Score is 0 out of 10"
        android:textColor="@android:color/secondary_text_dark"
        android:textSize="20sp"/>
    <Button
        android:id="@+id/btnFinish"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:text="@string/btnFinish"
        android:textColor="@color/design_default_color_primary"
        android:textSize="18sp"
        android:textStyle="bold"/>

</LinearLayout>